@@ -19,7 +19,9 @@ package org.apache.kafka.streams.kstream.internals;
 import org.apache.kafka.common.serialization.Serdes;
 import org.apache.kafka.common.serialization.StringSerializer;
 import org.apache.kafka.common.utils.Bytes;
+import org.apache.kafka.streams.KeyValueTimestamp;
 import org.apache.kafka.streams.StreamsBuilder;
+import org.apache.kafka.streams.TestInputTopic;
 import org.apache.kafka.streams.Topology;
 import org.apache.kafka.streams.TopologyTestDriver;
 import org.apache.kafka.streams.TopologyTestDriverWrapper;
@@ -29,36 +31,42 @@ import org.apache.kafka.streams.kstream.KTable;
 import org.apache.kafka.streams.kstream.Materialized;
 import org.apache.kafka.streams.processor.internals.InternalTopologyBuilder;
 import org.apache.kafka.streams.state.KeyValueStore;
-import org.apache.kafka.streams.test.ConsumerRecordFactory;
-import org.apache.kafka.test.MockProcessor;
-import org.apache.kafka.test.MockProcessorSupplier;
+import org.apache.kafka.streams.state.ValueAndTimestamp;
+import org.apache.kafka.test.MockApiProcessor;
+import org.apache.kafka.test.MockApiProcessorSupplier;
 import org.apache.kafka.test.StreamsTestUtils;
 import org.junit.Test;
 
+import java.time.Duration;
+import java.time.Instant;
 import java.util.Properties;
 
 import static java.util.Arrays.asList;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
 
 @SuppressWarnings("unchecked")
 public class KTableMapValuesTest {
     private final Consumed<String, String> consumed = Consumed.with(Serdes.String(), Serdes.String());
-    private final ConsumerRecordFactory<String, String> recordFactory =
-        new ConsumerRecordFactory<>(new StringSerializer(), new StringSerializer(), 0L);
     private final Properties props = StreamsTestUtils.getStreamsConfig(Serdes.String(), Serdes.String());
 
     private void doTestKTable(final StreamsBuilder builder,
                               final String topic1,
-                              final MockProcessorSupplier<String, Integer> supplier) {
+                              final MockApiProcessorSupplier<String, Integer, Void, Void> supplier) {
         try (final TopologyTestDriver driver = new TopologyTestDriver(builder.build(), props)) {
-            driver.pipeInput(recordFactory.create(topic1, "A", "1"));
-            driver.pipeInput(recordFactory.create(topic1, "B", "2"));
-            driver.pipeInput(recordFactory.create(topic1, "C", "3"));
-            driver.pipeInput(recordFactory.create(topic1, "D", "4"));
-            assertEquals(asList("A:1 (ts: 0)", "B:2 (ts: 0)", "C:3 (ts: 0)", "D:4 (ts: 0)"), supplier.theCapturedProcessor().processed);
+            final TestInputTopic<String, String> inputTopic1 =
+                    driver.createInputTopic(topic1, new StringSerializer(), new StringSerializer(), Instant.ofEpochMilli(0L), Duration.ZERO);
+            inputTopic1.pipeInput("A", "1", 5L);
+            inputTopic1.pipeInput("B", "2", 25L);
+            inputTopic1.pipeInput("C", "3", 20L);
+            inputTopic1.pipeInput("D", "4", 10L);
+            assertEquals(asList(new KeyValueTimestamp<>("A", 1, 5),
+                    new KeyValueTimestamp<>("B", 2, 25),
+                    new KeyValueTimestamp<>("C", 3, 20),
+                    new KeyValueTimestamp<>("D", 4, 10)), supplier.theCapturedProcessor().processed());
         }
     }
 
@@ -70,7 +78,7 @@ public class KTableMapValuesTest {
         final KTable<String, String> table1 = builder.table(topic1, consumed);
         final KTable<String, Integer> table2 = table1.mapValues(value -> value.charAt(0) - 48);
 
-        final MockProcessorSupplier<String, Integer> supplier = new MockProcessorSupplier<>();
+        final MockApiProcessorSupplier<String, Integer, Void, Void> supplier = new MockApiProcessorSupplier<>();
         table2.toStream().process(supplier);
 
         doTestKTable(builder, topic1, supplier);
@@ -88,7 +96,7 @@ public class KTableMapValuesTest {
                 Materialized.<String, Integer, KeyValueStore<Bytes, byte[]>>as("anyName")
                     .withValueSerde(Serdes.Integer()));
 
-        final MockProcessorSupplier<String, Integer> supplier = new MockProcessorSupplier<>();
+        final MockApiProcessorSupplier<String, Integer, Void, Void> supplier = new MockApiProcessorSupplier<>();
         table2.toStream().process(supplier);
 
         doTestKTable(builder, topic1, supplier);
@@ -109,54 +117,56 @@ public class KTableMapValuesTest {
         topologyBuilder.connectProcessorAndStateStores(table3.name, getterSupplier3.storeNames());
 
         try (final TopologyTestDriverWrapper driver = new TopologyTestDriverWrapper(builder.build(), props)) {
+            final TestInputTopic<String, String> inputTopic1 =
+                    driver.createInputTopic(topic1, new StringSerializer(), new StringSerializer(), Instant.ofEpochMilli(0L), Duration.ZERO);
             final KTableValueGetter<String, Integer> getter2 = getterSupplier2.get();
             final KTableValueGetter<String, Integer> getter3 = getterSupplier3.get();
 
             getter2.init(driver.setCurrentNodeForProcessorContext(table2.name));
             getter3.init(driver.setCurrentNodeForProcessorContext(table3.name));
 
-            driver.pipeInput(recordFactory.create(topic1, "A", "01"));
-            driver.pipeInput(recordFactory.create(topic1, "B", "01"));
-            driver.pipeInput(recordFactory.create(topic1, "C", "01"));
+            inputTopic1.pipeInput("A", "01", 50L);
+            inputTopic1.pipeInput("B", "01", 10L);
+            inputTopic1.pipeInput("C", "01", 30L);
 
-            assertEquals(new Integer(1), getter2.get("A"));
-            assertEquals(new Integer(1), getter2.get("B"));
-            assertEquals(new Integer(1), getter2.get("C"));
+            assertEquals(ValueAndTimestamp.make(1, 50L), getter2.get("A"));
+            assertEquals(ValueAndTimestamp.make(1, 10L), getter2.get("B"));
+            assertEquals(ValueAndTimestamp.make(1, 30L), getter2.get("C"));
 
-            assertEquals(new Integer(-1), getter3.get("A"));
-            assertEquals(new Integer(-1), getter3.get("B"));
-            assertEquals(new Integer(-1), getter3.get("C"));
+            assertEquals(ValueAndTimestamp.make(-1, 50L), getter3.get("A"));
+            assertEquals(ValueAndTimestamp.make(-1, 10L), getter3.get("B"));
+            assertEquals(ValueAndTimestamp.make(-1, 30L), getter3.get("C"));
 
-            driver.pipeInput(recordFactory.create(topic1, "A", "02"));
-            driver.pipeInput(recordFactory.create(topic1, "B", "02"));
+            inputTopic1.pipeInput("A", "02", 25L);
+            inputTopic1.pipeInput("B", "02", 20L);
 
-            assertEquals(new Integer(2), getter2.get("A"));
-            assertEquals(new Integer(2), getter2.get("B"));
-            assertEquals(new Integer(1), getter2.get("C"));
+            assertEquals(ValueAndTimestamp.make(2, 25L), getter2.get("A"));
+            assertEquals(ValueAndTimestamp.make(2, 20L), getter2.get("B"));
+            assertEquals(ValueAndTimestamp.make(1, 30L), getter2.get("C"));
 
-            assertEquals(new Integer(-2), getter3.get("A"));
-            assertEquals(new Integer(-2), getter3.get("B"));
-            assertEquals(new Integer(-1), getter3.get("C"));
+            assertEquals(ValueAndTimestamp.make(-2, 25L), getter3.get("A"));
+            assertEquals(ValueAndTimestamp.make(-2, 20L), getter3.get("B"));
+            assertEquals(ValueAndTimestamp.make(-1, 30L), getter3.get("C"));
 
-            driver.pipeInput(recordFactory.create(topic1, "A", "03"));
+            inputTopic1.pipeInput("A", "03", 35L);
 
-            assertEquals(new Integer(3), getter2.get("A"));
-            assertEquals(new Integer(2), getter2.get("B"));
-            assertEquals(new Integer(1), getter2.get("C"));
+            assertEquals(ValueAndTimestamp.make(3, 35L), getter2.get("A"));
+            assertEquals(ValueAndTimestamp.make(2, 20L), getter2.get("B"));
+            assertEquals(ValueAndTimestamp.make(1, 30L), getter2.get("C"));
 
-            assertEquals(new Integer(-3), getter3.get("A"));
-            assertEquals(new Integer(-2), getter3.get("B"));
-            assertEquals(new Integer(-1), getter3.get("C"));
+            assertEquals(ValueAndTimestamp.make(-3, 35L), getter3.get("A"));
+            assertEquals(ValueAndTimestamp.make(-2, 20L), getter3.get("B"));
+            assertEquals(ValueAndTimestamp.make(-1, 30L), getter3.get("C"));
 
-            driver.pipeInput(recordFactory.create(topic1, "A", (String) null));
+            inputTopic1.pipeInput("A", (String) null, 1L);
 
             assertNull(getter2.get("A"));
-            assertEquals(new Integer(2), getter2.get("B"));
-            assertEquals(new Integer(1), getter2.get("C"));
+            assertEquals(ValueAndTimestamp.make(2, 20L), getter2.get("B"));
+            assertEquals(ValueAndTimestamp.make(1, 30L), getter2.get("C"));
 
             assertNull(getter3.get("A"));
-            assertEquals(new Integer(-2), getter3.get("B"));
-            assertEquals(new Integer(-1), getter3.get("C"));
+            assertEquals(ValueAndTimestamp.make(-2, 20L), getter3.get("B"));
+            assertEquals(ValueAndTimestamp.make(-1, 30L), getter3.get("C"));
         }
     }
 
@@ -171,16 +181,16 @@ public class KTableMapValuesTest {
             (KTableImpl<String, String, String>) builder.table(topic1, consumed);
         final KTableImpl<String, String, Integer> table2 =
             (KTableImpl<String, String, Integer>) table1.mapValues(
-                Integer::new,
+                s -> Integer.valueOf(s),
                 Materialized.<String, Integer, KeyValueStore<Bytes, byte[]>>as(storeName2)
                     .withValueSerde(Serdes.Integer()));
         final KTableImpl<String, String, Integer> table3 =
             (KTableImpl<String, String, Integer>) table1.mapValues(
-                value -> new Integer(value) * (-1),
+                value -> Integer.valueOf(value) * (-1),
                 Materialized.<String, Integer, KeyValueStore<Bytes, byte[]>>as(storeName3)
                     .withValueSerde(Serdes.Integer()));
         final KTableImpl<String, String, Integer> table4 =
-            (KTableImpl<String, String, Integer>) table1.mapValues(Integer::new);
+            (KTableImpl<String, String, Integer>) table1.mapValues(s -> Integer.valueOf(s));
 
         assertEquals(storeName2, table2.queryableStoreName());
         assertEquals(storeName3, table3.queryableStoreName());
@@ -197,68 +207,116 @@ public class KTableMapValuesTest {
         final KTableImpl<String, String, String> table1 =
             (KTableImpl<String, String, String>) builder.table(topic1, consumed);
         final KTableImpl<String, String, Integer> table2 =
-            (KTableImpl<String, String, Integer>) table1.mapValues(Integer::new);
+            (KTableImpl<String, String, Integer>) table1.mapValues(s -> Integer.valueOf(s));
 
-        final MockProcessorSupplier<String, Integer> supplier = new MockProcessorSupplier<>();
+        final MockApiProcessorSupplier<String, Integer, Void, Void> supplier = new MockApiProcessorSupplier<>();
         final Topology topology = builder.build().addProcessor("proc", supplier, table2.name);
 
         try (final TopologyTestDriver driver = new TopologyTestDriver(topology, props)) {
-            final MockProcessor<String, Integer> proc = supplier.theCapturedProcessor();
+            final TestInputTopic<String, String> inputTopic1 =
+                    driver.createInputTopic(topic1, new StringSerializer(), new StringSerializer(), Instant.ofEpochMilli(0L), Duration.ZERO);
+            final MockApiProcessor<String, Integer, Void, Void> proc = supplier.theCapturedProcessor();
 
             assertFalse(table1.sendingOldValueEnabled());
             assertFalse(table2.sendingOldValueEnabled());
 
-            driver.pipeInput(recordFactory.create(topic1, "A", "01"));
-            driver.pipeInput(recordFactory.create(topic1, "B", "01"));
-            driver.pipeInput(recordFactory.create(topic1, "C", "01"));
-            proc.checkAndClearProcessResult("A:(1<-null) (ts: 0)", "B:(1<-null) (ts: 0)", "C:(1<-null) (ts: 0)");
+            inputTopic1.pipeInput("A", "01", 5L);
+            inputTopic1.pipeInput("B", "01", 10L);
+            inputTopic1.pipeInput("C", "01", 15L);
+            proc.checkAndClearProcessResult(new KeyValueTimestamp<>("A", new Change<>(1, null), 5),
+                    new KeyValueTimestamp<>("B", new Change<>(1, null), 10),
+                    new KeyValueTimestamp<>("C", new Change<>(1, null), 15));
 
-            driver.pipeInput(recordFactory.create(topic1, "A", "02"));
-            driver.pipeInput(recordFactory.create(topic1, "B", "02"));
-            proc.checkAndClearProcessResult("A:(2<-null) (ts: 0)", "B:(2<-null) (ts: 0)");
+            inputTopic1.pipeInput("A", "02", 10L);
+            inputTopic1.pipeInput("B", "02", 8L);
+            proc.checkAndClearProcessResult(new KeyValueTimestamp<>("A", new Change<>(2, null), 10),
+                    new KeyValueTimestamp<>("B", new Change<>(2, null), 8));
 
-            driver.pipeInput(recordFactory.create(topic1, "A", "03"));
-            proc.checkAndClearProcessResult("A:(3<-null) (ts: 0)");
+            inputTopic1.pipeInput("A", "03", 20L);
+            proc.checkAndClearProcessResult(new KeyValueTimestamp<>("A", new Change<>(3, null), 20));
 
-            driver.pipeInput(recordFactory.create(topic1, "A", (String) null));
-            proc.checkAndClearProcessResult("A:(null<-null) (ts: 0)");
+            inputTopic1.pipeInput("A", (String) null, 30L);
+            proc.checkAndClearProcessResult(new KeyValueTimestamp<>("A", new Change<>(null, null), 30));
         }
     }
 
     @Test
-    public void testSendingOldValue() {
+    public void shouldEnableSendingOldValuesOnParentIfMapValuesNotMaterialized() {
         final StreamsBuilder builder = new StreamsBuilder();
         final String topic1 = "topic1";
 
         final KTableImpl<String, String, String> table1 =
             (KTableImpl<String, String, String>) builder.table(topic1, consumed);
         final KTableImpl<String, String, Integer> table2 =
-            (KTableImpl<String, String, Integer>) table1.mapValues(Integer::new);
-        table2.enableSendingOldValues();
+            (KTableImpl<String, String, Integer>) table1.mapValues(s -> Integer.valueOf(s));
 
-        final MockProcessorSupplier<String, Integer> supplier = new MockProcessorSupplier<>();
+        table2.enableSendingOldValues(true);
+
+        assertThat(table1.sendingOldValueEnabled(), is(true));
+        assertThat(table2.sendingOldValueEnabled(), is(true));
+
+        testSendingOldValues(builder, topic1, table2);
+    }
+
+    @Test
+    public void shouldNotEnableSendingOldValuesOnParentIfMapValuesMaterialized() {
+        final StreamsBuilder builder = new StreamsBuilder();
+        final String topic1 = "topic1";
+
+        final KTableImpl<String, String, String> table1 =
+            (KTableImpl<String, String, String>) builder.table(topic1, consumed);
+        final KTableImpl<String, String, Integer> table2 =
+            (KTableImpl<String, String, Integer>) table1.mapValues(
+                s -> Integer.valueOf(s),
+                Materialized.<String, Integer, KeyValueStore<Bytes, byte[]>>as("bob").withValueSerde(Serdes.Integer())
+            );
+
+        table2.enableSendingOldValues(true);
+
+        assertThat(table1.sendingOldValueEnabled(), is(false));
+        assertThat(table2.sendingOldValueEnabled(), is(true));
+
+        testSendingOldValues(builder, topic1, table2);
+    }
+
+    private void testSendingOldValues(
+        final StreamsBuilder builder,
+        final String topic1,
+        final KTableImpl<String, String, Integer> table2
+    ) {
+        final MockApiProcessorSupplier<String, Integer, Void, Void> supplier = new MockApiProcessorSupplier<>();
         builder.build().addProcessor("proc", supplier, table2.name);
 
         try (final TopologyTestDriver driver = new TopologyTestDriver(builder.build(), props)) {
-            final MockProcessor<String, Integer> proc = supplier.theCapturedProcessor();
+            final TestInputTopic<String, String> inputTopic1 =
+                driver.createInputTopic(topic1, new StringSerializer(), new StringSerializer(), Instant.ofEpochMilli(0L), Duration.ZERO);
+            final MockApiProcessor<String, Integer, Void, Void> proc = supplier.theCapturedProcessor();
 
-            assertTrue(table1.sendingOldValueEnabled());
-            assertTrue(table2.sendingOldValueEnabled());
+            inputTopic1.pipeInput("A", "01", 5L);
+            inputTopic1.pipeInput("B", "01", 10L);
+            inputTopic1.pipeInput("C", "01", 15L);
+            proc.checkAndClearProcessResult(
+                new KeyValueTimestamp<>("A", new Change<>(1, null), 5),
+                new KeyValueTimestamp<>("B", new Change<>(1, null), 10),
+                new KeyValueTimestamp<>("C", new Change<>(1, null), 15)
+            );
 
-            driver.pipeInput(recordFactory.create(topic1, "A", "01"));
-            driver.pipeInput(recordFactory.create(topic1, "B", "01"));
-            driver.pipeInput(recordFactory.create(topic1, "C", "01"));
-            proc.checkAndClearProcessResult("A:(1<-null) (ts: 0)", "B:(1<-null) (ts: 0)", "C:(1<-null) (ts: 0)");
+            inputTopic1.pipeInput("A", "02", 10L);
+            inputTopic1.pipeInput("B", "02", 8L);
+            proc.checkAndClearProcessResult(
+                new KeyValueTimestamp<>("A", new Change<>(2, 1), 10),
+                new KeyValueTimestamp<>("B", new Change<>(2, 1), 8)
+            );
 
-            driver.pipeInput(recordFactory.create(topic1, "A", "02"));
-            driver.pipeInput(recordFactory.create(topic1, "B", "02"));
-            proc.checkAndClearProcessResult("A:(2<-1) (ts: 0)", "B:(2<-1) (ts: 0)");
+            inputTopic1.pipeInput("A", "03", 20L);
+            proc.checkAndClearProcessResult(
+                new KeyValueTimestamp<>("A", new Change<>(3, 2), 20)
+            );
 
-            driver.pipeInput(recordFactory.create(topic1, "A", "03"));
-            proc.checkAndClearProcessResult("A:(3<-2) (ts: 0)");
-
-            driver.pipeInput(recordFactory.create(topic1, "A", (String) null));
-            proc.checkAndClearProcessResult("A:(null<-3) (ts: 0)");
+            inputTopic1.pipeInput("A", (String) null, 30L);
+            proc.checkAndClearProcessResult(
+                new KeyValueTimestamp<>("A", new Change<>(null, 3), 30)
+            );
         }
     }
 }
